--- a/modules/search/pages/simple-search-ui.adoc
+++ b/modules/search/pages/simple-search-ui.adoc
@@ -43,7 +43,7 @@ To run a simple search with the Couchbase {page-ui-name}:
 For more information about the available parameters, see xref:search-request-params.adoc[].
 .. Click btn:[Execute].
 
-=== Example
+=== Example: Simple Text Search
 
 For example, the following query searches for the strings `view`, `food`, and `beach`:
 
@@ -57,6 +57,24 @@ It also returns all available fields in the index, and returns 10 results per pa
 
 TIP: Use a xref:index-aliases.adoc[Search index alias] to search multiple Search indexes in a single search query. 
 Use the xref:search-request-params.adoc#collections[`collections` parameter] in your request to specify an array of collections to search from the Search index.
+
+=== Example: Validate a Search Query
+
+[.status]#Couchbase Server 7.6.4#
+
+For example, the following query searches a Search index, `landmark-content-index`, using a xref:search-request-params.adoc#geopoint-queries-distance[Distance/Radius-Based Geopoint Query] on the `geo` field.
+The query includes the xref:search-request-params.adoc#ctl[ctl object] with the `validate` property to validate the query:
+
+[source,json]
+----
+include::example$run-search-validate-ui.jsonc[]
+----
+
+Since the `landmark-content-index` does not include a mapping for the `geo` field and the `validate` property is included in the query, the Web Console returns the following error: 
+
+----
+query_validate: field not indexed, name: geo, type: geopoint
+----
 
 == Next Steps 
 
