NO ISSUE: Updates after merging from 7.6 to Capella
Revert multiple cluster → database changes
Fix spaces

--- a/modules/search/pages/customize-index.adoc
+++ b/modules/search/pages/customize-index.adoc
@@ -40,7 +40,7 @@ Type mappings start at the collection level.
 Create additional mappings for child fields or xref:create-child-mapping.adoc[JSON objects] under a collection's type mapping to restrict the documents added to your index.
 This can improve Search index performance over indexing entire collections.
 
-If your database is running Couchbase Server version 7.6.2 and later, you can also choose to include document metadata inside your Search index by xref:create-xattrs-mapping.adoc[creating an XATTRs mapping].
+If your cluster is running Couchbase Server version 7.6.2 and later, you can also choose to include document metadata inside your Search index by xref:create-xattrs-mapping.adoc[creating an XATTRs mapping].
 
 For more information about how to configure settings for mappings and type mappings in Quick Mode, see xref:quick-index-field-options.adoc[].
 
