--- a/modules/search/pages/search-request-params.adoc
+++ b/modules/search/pages/search-request-params.adoc
@@ -26,7 +26,7 @@ A Search request can contain the following properties:
 An object that contains the properties for one of the supported query types.
 
 The `query` object is required if you want to run a regular search, or a hybrid search that includes a xref:vector-search:vector-search.adoc[Vector Search] query.
-If your database is running Couchbase Server version 7.6.2 and later, you do not need to include the `query` object for a pure Vector Search query. 
+If your cluster is running Couchbase Server version 7.6.2 and later, you do not need to include the `query` object for a pure Vector Search query. 
 
 For more information about how to configure the `query` object, see <<query-object,>>.
 
@@ -170,7 +170,7 @@ Add the `knn` array with at least one object to run a Vector Search query:
 include::example$run-search-full-request.jsonc[tag=knn]
 ----
 
-NOTE: If your database is running Couchbase Server version 7.6.2 and later, to return only results from your Vector Search query, do not include a `query` object with your Search request.
+NOTE: If your cluster is running Couchbase Server version 7.6.2 and later, to return only results from your Vector Search query, do not include a `query` object with your Search request.
 To run a hybrid query that uses regular Search Service parameters together with Vector Search to return results, see the <<query-object,Query Object>> section. 
 
 An object in the `knn` array can contain the following properties: 
@@ -183,7 +183,7 @@ An object in the `knn` array can contain the following properties:
 
 Enter the total number of results that you want to return from your Vector Search query. 
 
-The Search Service returns the `k` closest vectors to the vector given in `vector` or, if your database is running Couchbase Server version 7.6.2 or later, `vector_base64`.
+The Search Service returns the `k` closest vectors to the vector given in `vector` or, if your cluster is running Couchbase Server version 7.6.2 or later, `vector_base64`.
 
 NOTE: The <<size-limit,size or limit property>> overrides any value set in `k`.
 
@@ -197,15 +197,15 @@ Enter the vector that you want to compare to the vector data in `field`.
 
 The Search Service uses the similarity metric defined in the xref:search-index-params.adoc#similarity[Search index definition] to return the `k` closest vectors from the Search index. 
 
-NOTE: The vector in your Search query must match the dimension of the vectors stored in your Search index.
+NOTE: The vector in your Search query must match the dimension of the vectors stored in your Search index. 
 If the dimensions do not match, your Search query does not return any results.
 For more information about the dimension value, see the xref:search-index-params.adoc#dims[dims property] or the xref:child-field-options-reference.adoc#dimension[Dimension option] in the UI. 
 
 |vector_base64 |Base64 Encoded String |Must have `vector` or `vector_base64` a|
 
-If your database is running Couchbase Server version 7.6.2 or later, enter a vector, encoded as a base64 string, that you want to compare to the vector data in `field`. 
+If your cluster is running Couchbase Server version 7.6.2 or later, enter a vector, encoded as a base64 string, that you want to compare to the vector data in `field`. 
 
-The Search Service uses the similarity metric defined in the xref:search-index-params.adoc#similarity[Search index definition] to return the `k` closest vectors from the Search index. 
+The Search Service uses the similarity metric defined in the xref:search-index-params.adoc#similarity[Search index definition] to return the `k` closest vectors from the Search index.
 
 NOTE: The vector in your Search query must match the dimension of the vectors stored in your Search index. 
 If the dimensions do not match, your Search query does not return any results.
@@ -472,7 +472,7 @@ For example, `parentField.childField`.
 The Query String syntax does not support SQL++ field syntax.
 For example, you cannot use `[*]` or `[3]` as array locations in a field name path. 
 
-If your database is running Couchbase Server version 7.6.2 or later and you want to search your document metadata, you must prefix the metadata field's name with `_$xattrs`.
+If your cluster is running Couchbase Server version 7.6.2 or later and you want to search your document metadata, you must prefix the metadata field's name with `_$xattrs`.
 a| 
 .Query String query for "pool" in the description field
 [source,json]
@@ -1738,7 +1738,7 @@ include::example$query-special.jsonc[tag=match_all]
 a| Use the `match_none` object as the only property in your `query` object to return no documents from the Search index in search results.
  
 If you add a <<knn,knn object>> and a `query` object with the `match_none` object to your request, your search returns only matches to the Vector Search query inside the `knn` object.
-If your database is running Couchbase Server version 7.6.2 and later, when running a xref:vector-search:vector-search.adoc[Vector Search] query without a `query` object, the Search Service automatically adds a `query` object with a `match_none` query object to your request.
+If your cluster is running Couchbase Server version 7.6.2 and later, when running a xref:vector-search:vector-search.adoc[Vector Search] query without a `query` object, the Search Service automatically adds a `query` object with a `match_none` query object to your request.
 
 a|
 .Return no documents from the Search index
@@ -1791,7 +1791,7 @@ include::example$query-boost.jsonc[tag=long]
 | String
 a| Specify a specific field name, using dot notation, where the Search Service should search for a match to your search query. 
 
-If your database is running Couchbase Server version 7.6.2 or later and you want to search for document metadata held in XATTRs, you must add `_$xattrs` to the start of your metadata field's name. 
+If your cluster is running Couchbase Server version 7.6.2 or later and you want to search for document metadata held in XATTRs, you must add `_$xattrs` to the start of your metadata field's name. 
 For example, `"_$xattrs.description"`.
 a| 
 .Search for documents where the pets_ok field is true
