--- a/modules/search/pages/search.adoc
+++ b/modules/search/pages/search.adoc
@@ -24,7 +24,7 @@ Use a <<indexes,Search index>> to efficiently store your data, and retrieve it w
 
 A Search index tells the Search Service what content to use from the documents in your database for processing <<queries,Search queries>>. 
 A Search index can use any field across multiple collections in a single scope.
-If your database is running Couchbase Server version 7.6.2 and later, it can also include any document metadata stored in Extended Attributes (XATTRs). 
+If your cluster is running Couchbase Server version 7.6.2 and later, it can also include any document metadata stored in Extended Attributes (XATTRs).
 
 You can choose to exclude content to improve search performance and improve the relevance of search results.
 
