--- a/modules/vector-search/pages/run-vector-search-ui.adoc
+++ b/modules/vector-search/pages/run-vector-search-ui.adoc
@@ -102,7 +102,7 @@ Make sure you remove the lines for `// tag::partial[]` and `// end::partial[]`.
 [#base64]
 === Example: Running a Semantic Search Query with a base64 Encoded String 
 
-If your database is running Couchbase Server version 7.6.2 or later, you can use vectors encoded as base64 strings with Vector Search. 
+If your cluster is running Couchbase Server version 7.6.2 or later, you can use vectors encoded as base64 strings with Vector Search. 
 For example, the following document describes the color `navy`, with base64 encoded strings in the `embedding_vector_dot` and `colorvect_l2` fields instead of arrays: 
 
 [source,json]
