--- a/modules/search/pages/search-index-params.adoc
+++ b/modules/search/pages/search-index-params.adoc
@@ -931,7 +931,7 @@ A JSON object field object must:
 * Have a name that matches a JSON object child field in your documents.
 * Use the same property structure as a `\{scope\}.\{collection\}` object.
 
-If your database is running Couchbase Server version 7.6.2 and later and you're adding Extended Attributes (XATTRs) from your document metadata to your Search index, your XATTRs mapping definition must: 
+If your cluster is running Couchbase Server version 7.6.2 and later and you're adding Extended Attributes (XATTRs) from your document metadata to your Search index, your XATTRs mapping definition must: 
 
 * Be a child object of a `\{scope\}.\{collection\}` object.
 * Have the name `_$xattrs`.
