[AV-84497] Fixing some links and language  that no longer makes sense, removing . file

--- a/modules/search/pages/field-data-types-reference.adoc
+++ b/modules/search/pages/field-data-types-reference.adoc
@@ -7,7 +7,7 @@
 [abstract]
 {description}
 
-When you create a mapping for a field in xref:create-quick-index.adoc[Quick Mode] or xref:create-child-field.adoc[Advanced Mode], you need to set the field's data type. 
+When you xref:create-type-mapping.adoc[], you need to set the field's data type. 
 
 If you create a Search index and do not set a data type for a field, the Search Service automatically assigns a field data type.
 For example, if you created a xref:customize-index.adoc#type-mappings[dynamic type mapping], the Search Service automatically assigns data types to all fields in the type mapping.
