--- a/modules/search/pages/customize-index.adoc
+++ b/modules/search/pages/customize-index.adoc
@@ -64,7 +64,7 @@ Use a type mapping to include or exclude specific documents in a collection from
 Type mappings can also set a field's data type and other settings. 
 
 Type mappings start at the collection level. 
-Create additional mappings for child fields or JSON objects under a collection's type mapping to restrict the documents added to your index.
+Create additional mappings for document fields or JSON objects under a collection's type mapping to restrict the documents added to your index.
 This can improve Search index performance over indexing entire collections.
 
 If your operational cluster is running Couchbase Server version 7.6.2 and later, you can also choose to include document metadata inside your Search index by creating an XATTRs mapping.
