[DOC-12430] Adding anchor to child-field-options-reference
First draft of vector-search-index-architecture

--- a/modules/search/pages/child-field-options-reference.adoc
+++ b/modules/search/pages/child-field-options-reference.adoc
@@ -23,7 +23,7 @@ include::partial$vector-search-field-descriptions.adoc[tag=dimension]
 
 include::partial$vector-search-field-descriptions.adoc[tag=similarity_metric]
 
-|Optimized For (Vector Fields Only) a|
+|[[optimized]]Optimized For (Vector Fields Only) a|
 
 include::partial$vector-search-field-descriptions.adoc[tag=optimized_for]
 
