[NO ISSUE] Quickly marking new features for 7.6.4 (#307)

--- a/modules/search/partials/vector-search-field-descriptions.adoc
+++ b/modules/search/partials/vector-search-field-descriptions.adoc
@@ -12,7 +12,7 @@ This may reduce the accuracy of results.
 +
 The Search Service uses half the `nprobe` value calculated for *recall* priority. 
 
-* *memory-efficient*: The Search Service prioritizes reducing memory usage and optimizes search operations for less resources.
+* *memory-efficient*: From Couchbase Server version 7.6.4 and later, choose this option to prioritize reducing memory usage and optimize search operations for less resources.
 This may reduce both accuracy (recall) and latency.
 +
 The Search Service uses either an inverted file index with scalar quantization, or a directly mapped index with exact vector comparisons, depending on the number of vectors in your data.
@@ -36,7 +36,7 @@ Smaller euclidean distances mean that the values of each coordinate in the vecto
 +
 It's best to use *l2_norm* similarity when your embeddings contain information about the count or measure of specific things, and your embedding model uses the same similarity metric. 
 
-* *cosine*: Calculated by adding the result of multiplying a vector's components, or the product of the magnitudes of the vectors and the cosine of the angle between them.
+* *cosine*: From Couchbase Server version 7.6.4 and later, the *cosine* similarity metric is calculated by adding the result of multiplying a vector's components, or the product of the magnitudes of the vectors and the cosine of the angle between them.
 This metric is not affected by the size of the vectors being measured.
 +
 Use *cosine* similarity to get the best results with an embedding model that uses cosine similarity.
