--- a/modules/tutorials/pages/buckets-scopes-and-collections.adoc
+++ b/modules/tutorials/pages/buckets-scopes-and-collections.adoc
@@ -57,7 +57,7 @@ To create a collection:
 
 . In the list of scopes and collections, next to `art-school-scope`, click *Add Collection*.
 . Click btn:[Add Collection] next to `art-school-scope`.
-. For the scope name, enter `student-record-collection`.
+. For the collection name, enter `student-record-collection`.
 . Click btn:[Save] to create your first collection.
 
 To create the second collection, follow the previous steps but name the collection `course-record-collection`.
